
[TestShellf/lone_command - 1]
true
[]string{}
nil
---

[TestShellf/fixed_args - 1]
echo
[]string{"hello", "world"}
nil
---

[TestShellf/arg_with_space - 1]
echo
[]string{"hello world"}
nil
---

[TestShellf/path_quoting - 1]
echo
[]string{"/home/naitik shah/foo/bar"}
nil
---

[TestShellf/multiline_with_spaces - 1]
cryptsetup
[]string{"luksFormat", "--cipher", "aes-xts-plain64", "--key-size", "512", "--hash", "sha512", "--iter-time", "5000", "--use-random", "/home/naitik shah"}
nil
---
